--- a/android/build.gradle
+++ b/android/build.gradle
@@ -6,6 +6,10 @@ buildscript {
         targetSdkVersion = 34
         ndkVersion = "26.1.10909125"
         kotlinVersion = "1.9.22"
+        agp_version = '8.0.0'
+        agp_version1 = '8.0.0'
+        agp_version2 = '8.0.0'
+        agp_version3 = '8.2.0'
     }
     repositories {
         google()
